# multi-agent-email-support

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/internal_docs/: api_documentation.md  authentication.md  billing.md  enterprise_support.md  integrations.md  product_features.md  security_policies.md  sso.md  troubleshooting.md  user_management.md
docs/: architecture.mmd
scripts/: build_index.py  export_graph.py
src/support_agent/: config.py  exceptions.py  logger.py
src/support_agent/agents/: base.py  formatting.py  intent.py  planner.py  refiner.py  retrieval.py  retrieval_validator.py  reviewer.py  writer.py
src/support_agent/llm/: client.py  prompts.py
src/support_agent/models/: enums.py  schemas.py  state.py
src/support_agent/rag/: loader.py  vector_store.py
src/support_agent/workflow/: graph.py  nodes.py  orchestrator.py
tests/: test_loader.py  test_nodes.py  test_routing.py  test_schemas.py  test_state.py  test_vector_store.py
